# cookiecutter-django-poetry

./: .pyup.yml  CONTRIBUTING.md  README.md  cookiecutter.json  setup.py
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: create_django_issue.py
tests/: test_docker.sh
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/compose/local/django/: Dockerfile
{{cookiecutter.project_slug}}/compose/local/docs/: Dockerfile
{{cookiecutter.project_slug}}/compose/production/django/: Dockerfile
